--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.cdnfonts.com/css/eurostile-mn" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>XBX</title>
   </head>
   <body>
     <div id="root"></div>
